drone loaded weight logger now logs max weight limit.